Initial commit - upload project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# DB (gi? l?i c?a b?n)
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=task_management;encrypt=false
 spring.datasource.username=sa
 spring.datasource.password=123
@@ -6,3 +7,8 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+# JWT: dùng base64 secret >= 256 bits
+# B?n có th? t?o b?ng: openssl rand -base64 32
+jwt.secret=Z2VuZXJhdGVkLXlvdXItYmFzZTY0LXNlY3JldC1mb3ItdGVzdHMxMjM0NTY=
+jwt.expiration-ms=86400000  # 24h in ms
