Initial commit - upload project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # ========== DATABASE ==========
-# Khi ch?y bình th??ng (trong IDE): v?n dùng localhost
-# Khi ch?y trong Docker: Docker Compose s? override b?ng host.docker.internal
+# Khi ch\u1EA1y b\u00ECnh th\u01B0\u1EDDng (trong IDE): v\u1EABn d\u00F9ng localhost
+# Khi ch\u1EA1y trong Docker: Docker Compose s\u1EBD override b\u1EB1ng host.docker.internal
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=task_management;encrypt=false
 spring.datasource.username=sa
 spring.datasource.password=123
